Docker file for creation of all-in-one image , chrome , selenium,python for running the tests locally (no need for remote browser)

--- a/Dockerfile_all_in_one
+++ b/Dockerfile_all_in_one
@@ -45,4 +45,4 @@ ENV PATH="/venv/bin:$PATH"
 COPY . .
 
 # Command to run tests
-# CMD ["pytest", "--maxfail=1", "--disable-warnings", "-v", "--html=Reports/report.html"]
+# CMD ["pytest", "--run_env=local" "--maxfail=1", "--disable-warnings", "-v", "--html=Reports/report.html"]
